# search

./: .gitignore  .lintstagedrc.cjs  CLAUDE.md  README.md  biome.json  index.html  maintain-claude-md.skill  package-lock.json  package.json  settings.html  vite.config.js  vite.config.ts
.claude/: settings.local.json
.husky/: commit-msg  pre-commit  pre-push
docs/: README.md
docs/00-governance/: documentation-standards.md
docs/01-architecture/: README.md
docs/02-runbooks/: database-migration-verification.md  window-behavior-checklist.md
docs/03-changes/: CHANGE-INDEX.md
docs/03-changes/2026/2026-02-23-git-hooks-hardening/: CHANGELOG.md  IMPLEMENTATION.md  VALIDATION.md
docs/03-changes/2026/2026-02-23-multi-model-chat/: CHANGELOG.md  IMPLEMENTATION.md  VALIDATION.md
docs/03-changes/2026/2026-02-23-multi-provider-crud/: CHANGELOG.md  IMPLEMENTATION.md  VALIDATION.md
docs/03-changes/2026/2026-02-23-sqlite-persistence-and-settings-ui/: CHANGELOG.md  IMPLEMENTATION.md  VALIDATION.md
openspec/changes/ai-quick-search/: design.md  proposal.md  tasks.md
openspec/changes/ai-search-mvp/: design.md  proposal.md  tasks.md
src/: App.svelte  App.tsx  app.css  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/apps/: cache.rs  mod.rs  scanner.rs
src-tauri/src/db/: connection.rs  error.rs  mod.rs  schema.rs
src-tauri/src/db/migrations/: mod.rs  v1_initial.rs  v2_normalized_path.rs  v3_providers.rs  v4_provider_api_key_sqlite.rs  v5_chat_sessions.rs  v6_chat_messages.rs  v7_refactor_schema.rs  v8_fix_shared_messages.rs  v9_session_columns.rs
src-tauri/src/db/repositories/: apps.rs  chat_messages.rs  chat_session_columns.rs  chat_sessions.rs  mod.rs  providers.rs  settings.rs
src-tauri/src/provider/: mod.rs  openai.rs
src/components/: ProviderCard.tsx  theme-provider.tsx
src/components/chat/: ChatMessageBubble.tsx  ChatProviderColumn.tsx  ChatSidebar.tsx  MarkdownContent.tsx
src/components/ui/: command.tsx
src/hooks/: useChatMessages.ts  useChatQuery.ts  useChatSessions.ts  useProviders.ts
src/lib/: appSettings.ts  chatDb.ts  utils.ts
src/lib/components/: ConfigModal.svelte  ResultPanel.svelte  SearchBox.svelte
src/pages/: Chat.tsx  Main.tsx  Settings.tsx
src/types/: chat.ts  provider.ts
(+21 files in other folders)
