[package]
name = "ai-quick-search"
version = "0.1.0"
description = "AI Quick Search - A lightweight desktop AI search bar"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-openai = "0.28"
windows-registry = "0.5"
fuzzy-matcher = "0.3"
once_cell = "1"
dirs = "6"
