[package]
name = "ai-quick-search"
version = "0.2.0"
description = "AI Quick Search - A lightweight desktop AI search bar"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-openai = "0.28"
windows-registry = "0.5"
fuzzy-matcher = "0.3"
once_cell = "1"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
